--- a/recipes/bolognese.html
+++ b/recipes/bolognese.html
@@ -6,19 +6,20 @@
     </head>
 
     <body>
-        <a href="../index.html">Home</a>
-        <h1>Mom's Spaghetti Bolognese</h1>
+        <a class="home" href="../index.html">Home</a>
+        <link rel="stylesheet" href="../styles.css">
+        <h1 class="header">Mom's Spaghetti Bolognese</h1>
         <img src="https://res.cloudinary.com/dj3u6cnzh/image/upload/c_fill,w_1440/v1/hausmed/recipe/32feffb626610cab6da34c5cda2e5813.jpg?_a=BAAAV6DQ" alt="Spaghetti Bolognese" width="800">
 
-        <h2>Description</h2>
-        <p>Spaghetti Bolognese is one of the most popular pasta dishes worldwide, but interestingly, 
+        <h2 class="desc">Description</h2>
+        <p class="para">Spaghetti Bolognese is one of the most popular pasta dishes worldwide, but interestingly, 
         it is not an authentic Italian dish—at least, not in the way most people think!</p>
-        <p>The dish is inspired by Ragù alla Bolognese, a traditional meat sauce from Bologna, Italy.
+        <p class="para">The dish is inspired by Ragù alla Bolognese, a traditional meat sauce from Bologna, Italy.
             However, in Italy, this sauce is never served with spaghetti! 
             Instead, it is typically paired with tagliatelle (a flat, ribbon-like pasta) because the sauce clings better to its surface.</p>
         
-        <h2>Ingredients</h2>
-        <ul>
+        <h2 class="ingr">Ingredients</h2>
+        <ul class="list">
             <li>1 package spaghetti</li>
             <li>2 tablespoons olive oil</li>
             <li>1 onion, finely chopped</li>
@@ -35,8 +36,8 @@
             <li>1/4 cup freshly grated Parmesan Cheese</li>
         </ul>
 
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="steps">Steps</h2>
+        <ol class="list">
             <li>The dish is inspired by Ragù alla Bolognese, a traditional meat sauce from Bologna, Italy.
                 However, in Italy, this sauce is never served with spaghetti! Instead, it is typically paired with tagliatelle (a flat, ribbon-like pasta) because the sauce clings better to its surface.
                 Stir in spaghetti and return to a boil. Cook spaghetti uncovered, stirring occasionally,
