--- a/recipes/doner.html
+++ b/recipes/doner.html
@@ -7,18 +7,19 @@
     </head>
 
     <body>
-        <a href="../index.html">Home</a>
-        <h1>Turkish Doner Kebab</h1>
+        <a class="home" href="../index.html">HOME</a>
+        <link rel="stylesheet" href="../styles.css">
+        <h1 class="header">Turkish Doner Kebab</h1>
         <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/12/32/e7/07/doner-bread.jpg?w=900&h=500&s=1" alt="a classic German Doner Kebab" width="800">
        
-        <h2>Description</h2>
-        <p><strong>Doner Kebab</strong> is a popular Turkish dish made from seasoned meat (usually lamb, beef, or chicken) stacked on a vertical rotisserie. 
+        <h2 class="desc">Description</h2>
+        <p class="para"><strong>Doner Kebab</strong> is a popular Turkish dish made from seasoned meat (usually lamb, beef, or chicken) stacked on a vertical rotisserie. 
             As the meat cooks, thin slices are shaved off and served in flatbreads, pita, wraps, or with rice and salad.</p>
-        <p>Although the meal is originally Turkish, it is said, that the dish was first founded in the German capital Berlin by a Turkish immigrant.
-            Hence why the capital's most famous fast food is the Doner, and the German populus agreeing that the best and most original Doner is found there.</p>
+        <p class="para">Although the meal is originally Turkish, it is said, that the dish was first founded in the German capital Berlin by a Turkish immigrant.
+            Hence why the capital's most famous fast food is the Doner with the German populus agreeing that the best and only original Doner is found there.</p>
         
-        <h2>Ingredients</h2>
-        <ul>
+        <h2 class="ingr">Ingredients</h2>
+        <ul class="list">
             <li>1 teaspoon all-purpose flour</li>
             <li>1 teaspoon dried oregano</li>
             <li>1/2 teaspoon salt</li>
@@ -32,8 +33,8 @@
             <li>Vegetables of your choice</li>
         </ul>
 
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="steps">Steps</h2>
+        <ol class="list">
             <li>Preheat the oven to 350 degrees F (175 degrees C).</li>
             <li>Combine flour, oregano, salt, garlic powder, onion powder, Italian seasoning, black pepper, and cayenne pepper in a large bowl. 
                 Add ground lamb and knead until thoroughly mixed together, about 3 minutes.</li>
