--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,23 +6,24 @@
     </head>
 
     <body>
-        <a href="../index.html">Home</a>
-        <h1>Pizza Margherita</h1>
+        <a class="home" href="../index.html">Home</a>
+        <link rel="stylesheet" href="../styles.css">
+        <h1 class="header">Pizza Margherita</h1>
         <img src="https://cdn.shopify.com/s/files/1/0274/9503/9079/files/20220211142754-margherita-9920_5a73220e-4a1a-4d33-b38f-26e98e3cd986.jpg?v=1723650067" alt="a classic Pizza Margherita" width="800">
 
-        <h2>Description</h2>
-        <p>The <strong>Pizza Margherita</strong> is one of the most famous and classic pizza varieties in the world. 
+        <h2 class="desc">Description</h2>
+        <p class="para">The <strong>Pizza Margherita</strong> is one of the most famous and classic pizza varieties in the world. 
             It originates from Naples, Italy, and is known for its simple yet high-quality ingredients.</p>
-        <p> It was allegedly created in 1889 by the Neapolitan pizza maker Raffaele Esposito for Queen Margherita of Savoy. 
+        <p class="para"> It was allegedly created in 1889 by the Neapolitan pizza maker Raffaele Esposito for Queen Margherita of Savoy. 
             He wanted to make a pizza that represented the colors of the Italian flag:</p>
-        <ul>
+        <ul class="list">
             <li>Red - Tomato Sauce</li>
             <li>White - Mozzarella</li>
             <li>Green - Basil</li>
         </ul>
 
-        <h2>Ingredients</h2>
-        <ul>
+        <h2 class="ingr">Ingredients</h2>
+        <ul class="list">
             <li>3 ½ cups all-purpose flour</li>
             <li>1 teaspoon salt</li>
             <li>1 cup water</li>
@@ -36,8 +37,8 @@
             <li>sea salt</li>
         </ul>
 
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="steps">Steps</h2>
+        <ol class="list">
             <li>Stir flour and 1 teaspoon salt in a bowl. Set aside.</li>
             <li>Mix water, yeast, and sugar in a large bowl.
                 Let stand until yeast begins to form a creamy foam, about 5 minutes.</li>
