--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="headline">Odin Recipes</h1>
         <ul>
-        <li><a href="recipes/doner.html">Turkish Doner Kebab</a></li>
-        <li><a href="recipes/pizza.html">Pizza Margherita</a></li>
-        <li><a href="recipes/bolognese.html">Mom's Spaghetti Bolognese</a></li>
+        <li><a class="doner" href="recipes/doner.html">Turkish Doner Kebab</a></li>
+        <li><a class="pizza" href="recipes/pizza.html">Pizza Margherita</a></li>
+        <li><a class="bolognese" href="recipes/bolognese.html">Mom's Spaghetti Bolognese</a></li>
         </ul>
     </body>
 </html>
