Change Bolognese pic, styles and index layout

--- a/recipes/bolognese.html
+++ b/recipes/bolognese.html
@@ -9,7 +9,7 @@
         <a class="home" href="../index.html">Home</a>
         <link rel="stylesheet" href="../styles.css">
         <h1 class="header">Mom's Spaghetti Bolognese</h1>
-        <img src="https://res.cloudinary.com/dj3u6cnzh/image/upload/c_fill,w_1440/v1/hausmed/recipe/32feffb626610cab6da34c5cda2e5813.jpg?_a=BAAAV6DQ" alt="Spaghetti Bolognese" width="800">
+        <img src="https://cdn.stoneline.de/thumbnail/c5/63/4f/1727429313/spaghetti-bolognese_1920x1920.jpeg?ts=1727429404" alt="Spaghetti Bolognese" width="800">
 
         <h2 class="desc">Description</h2>
         <p class="para">Spaghetti Bolognese is one of the most popular pasta dishes worldwide, but interestingly, 
